--- a/examples/qm_gle.ipynb
+++ b/examples/qm_gle.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f774c3c4",
+   "id": "6de36b48",
    "metadata": {},
    "source": [
     "## Modified Euler Discretization\n",
@@ -98,6 +98,44 @@
     "-\\dr_{n} \\dt\n",
     "\\end{pmatrix} + \\mmu' \\begin{pmatrix} \\ssi & & \\\\ & \\ssi & \\\\ & & \\ssi \\end{pmatrix}_{3m \\times 3m} \\BB_n(\\dt).\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f774c3c4",
+   "metadata": {},
+   "source": [
+    "### Approach to derivation\n",
+    "\n",
+    "Let $\\Delta X_n(s) = X(t_n + s) - X(t_n)$, etc. Let $\\Delta \\tilde \\BB_n(s) = (\\diag(\\ssi) \\Delta \\BB_n^{(0)}(s), \\diag(\\ssi) \\Delta \\BB_n^{(1)}(s), \\diag(\\ssi) \\Delta \\BB_n^{(2)}(s))$.  Let $\\SSi(s) = \\cov(\\Delta B_{ni}^{(0)}(s), B_{ni}^{(1)}(s), B_{ni}^{2}(s))$.  Then \n",
+    "\n",
+    "$$\n",
+    "\\cov(\\tilde \\BB_n(s)) = \\SSi(s) \\otimes \\diag(\\ssi^2)\n",
+    "% = \\begin{bmatrix} \\sigma_1^2 \\SSi(s) & & 0\\\\\n",
+    "% & \\ddots & \\\\ 0 & & \\sigma_m^2 \\SSi(s) \\end{bmatrix}, \n",
+    "$$\n",
+    "\n",
+    "where $\\otimes$ is the Kronecker matrix product.  What we want is the distribution of $\\Delta \\WW_n(s) = (\\Delta \\BB^{(0)}_n(s), \\mmu' \\Delta \\BB^{(1)}_n(s), \\mmu' \\Delta \\BB^{(2)}_n(s)) = \\AA \\Delta \\tilde \\BB_n(s)$, where \n",
+    "\n",
+    "$$\n",
+    "\\AA_{m+3 \\times 3m} = \\begin{bmatrix} \\bm{I}_{m\\times m} & 0 & 0 \\\\ 0 & \\mmu' & 0 \\\\ 0 & 0 & \\mmu' \\end{bmatrix}.\n",
+    "$$\n",
+    "\n",
+    "This gives us a way to numerically evaluate $\\cov(\\Delta \\WW_n(s))$ on a computer, which we can then check against the theoretical result:\n",
+    "\n",
+    "$$\n",
+    "\\cov(\\Delta \\WW_n(s)) = \n",
+    "\\begin{bmatrix} s \\diag(\\ssi^2) & \\tfrac{s^2}{2} \\diag(\\sigma^2) \\mmu  & \\tfrac{s^3}{6} \\diag(\\sigma^2) \\mmu  \\\\\n",
+    "                                & \\tfrac{s^3}{3}\\sum_{i=1}^m \\mu_i^2 \\sigma_i^2 & \\tfrac {s^4}{8}\\sum_{i=1}^m \\mu_i^2 \\sigma_i^2 \\\\\n",
+    "                                & & \\tfrac{s^5}{20} \\sum_{i=1}^m \\mu_i^2 \\sigma_i^2 \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "### Todo\n",
+    "\n",
+    "- [ ] Check theoretical derivation on this $(m+3)\\times(m+3)$ variance matrix against numerical version, which is $\\AA (\\SSi(s) \\otimes \\diag(\\ssi^2)) \\AA'$.\n",
+    "\n",
+    "- [ ] Derive the bridge proposal for the modified Euler scheme.  It's very similar to what we did for usual SDEs, except instead of having $\\XX \\mid \\WW \\sim \\N(\\WW + \\mmu_{X|W}, \\SSi_{X|W})$, we now need $E[\\XX \\mid \\WW] = \\bm{C} \\WW + \\mmu_{X|W}$."
    ]
   },
   {
@@ -196,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
