updated derivation of pf for qm-gle

--- a/examples/latexdefs.tex
+++ b/examples/latexdefs.tex
@@ -42,10 +42,13 @@
 \newcommand{\xx}{\bm{x}}
 \newcommand{\yy}{\bm{y}}
 \newcommand{\YY}{\bm{Y}}
+\newcommand{\UU}{\bm{U}}
 \newcommand{\II}{\bm{I}}
 \newcommand{\eps}{{\bm \epsilon}}
 \newcommand{\eet}{{\bm \eta}}
 \newcommand{\lla}{{\bm \lambda}}
+\newcommand{\pph}{{\bm \phi}}
+\newcommand{\rrh}{{\bm \rho}}
 \newcommand{\gga}{{\bm \gamma}}
 \newcommand{\tta}{{\bm \tau}}
 \newcommand{\TTh}{\bm{\Theta}}
@@ -64,3 +67,5 @@
 \newcommand{\lap}{\textnormal{Lap}}
 \newcommand{\ella}{\ell_{\lap}}
 \newcommand{\Lhat}{\hat {\mathcal L}}
+\newcommand{\pot}{\mathcal{U}}
+\renewcommand{\vec}{\operatorname{vec}}
