updated MVN writeup and removed stoch_opt from init

--- a/examples/pf-mvn.ipynb
+++ b/examples/pf-mvn.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "# Particle Filter with Multivariate Normal Approximation \n",
     "\n",
-    "**Jonathan Ramkissoon, Martin Lysy, University of Waterloo** \n",
+    "**Jonathan Ramkissoon, Martin Lysy**  \n",
+    "**University of Waterloo** \n",
     "\n",
     "---\n",
     "\n",
     "## Introduction\n",
     "\n",
     "Parameter inference for stochastic differential equations is challenging due to intractable likelihood functions that integrate over the entire latent space. Particle filters offer a principled solution by providing a consistent estimate of SDE log-likelihood. However, the multinomial resampling step traditionally used in particle filters is not smoothly differentiable with respect to SDE parameters, which can be problematic in many likelihood-based inference methods. In this work we propose a smoothly differentiable particle filter by replacing the resampling step with a multi- variate Normal approximation and utilizing the reparameterization trick. This enables a host of gradient based methods for parameter inference. This notebook explains the Multivariate Normal approximation within the particle filter and it's effect on parameter inference for stochastic differential equations. \n",
+    "\n",
     "\n",
     "## Stochastic Differential Equations as State-Space Models\n",
     "\n",
@@ -57,9 +59,21 @@
     "\n",
     "In general, a particle filter is initialized with a point cloud simulated from $\\XX^* \\sim p(X_0)$. At each timestep it is updated according to the transition density $p(X_t \\mid X_{t-1}, \\theta)$ and re-weighted according to $p(y_t \\mid \\XX^*_t, \\theta)$. The resulting point cloud after this scheme are samples from the density $p(\\XX_{t+1} \\mid y_{t+1}, \\theta)$. \n",
     "\n",
-    "Under certain conditions, the bootstrap particle filter performs Multinomial resampling steps after re-weighting. **Why do we have the resampling step?**. After running this scheme for every timestep, we can sum the log-weights to get an estimate of the log-likelihood. \n",
+    "Bootstrap particle filters perform a Multinomial resampling step after re-weighting to avoid sample impoverishment. After running this scheme for every timestep, we can sum the log-weights to get an estimate of the log-likelihood. \n",
     "\n",
-    "In the context of gradient based inference methods, such as maximum likelihood, the multinomial resampling results in non-smooth estimates of the log-likelihood. To ensure a smooth estimate of the log-likelihood, the multinomial resampling step can be replaced with a Multivariate Normal distribution. \n"
+    "In the context of gradient based inference methods, such as maximum likelihood, the multinomial resampling results in non-smooth estimates of the log-likelihood. To ensure a smooth estimate of the log-likelihood, the multinomial resampling step can be replaced with a Multivariate Normal distribution. \n",
+    "\n",
+    "Here, we approximate the particle distribution, **$p(X_{t+1} \\mid y_t, X_t)$** with a multivariate Normal. That is, at timestep $t+1$, we have:\n",
+    "\n",
+    "- $N$ particles from timestep $t$: $\\XX^*_t$\n",
+    "- Corresponding weights from evaluating $p(y_t \\mid \\XX^*_t)$\n",
+    "\n",
+    "Then the particle distribution for timestep $t+1$ uses the weighted mean and weigthed covariance matrix of particles at timestep $t$ as parameters for the MVN.\n",
+    "\n",
+    "\n",
+    "## MVN Approximation in `pfjax`\n",
+    "\n",
+    "`pfjax` is set up to accomodate for different resampling methods, and the MVN approximation is no exception. An example of this is shown below: "
    ]
   },
   {
@@ -70,6 +84,7 @@
     "- [x] Particle filter estimation the log-likelihood\n",
     "- [x] Multinomial approximation of particle distribution \n",
     "- [ ] Explanation of the model\n",
+    "    - [ ] **Check particle distribution**\n",
     "- [ ] Explanation of the model in pfjax\n",
     "- [ ] Comparison of MVN filter and bootstrap filter\n",
     "    - [ ] Compare mode finding (i.e. stoch opt)\n",
@@ -85,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +118,11 @@
     "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "# import jax.scipy as jsp\n",
     "import jax.random as random\n",
-    "# from jax import lax\n",
     "\n",
     "import pfjax as pf\n",
-    "# import pfjax.sde\n",
+    "import optax\n",
+    "from functools import partial\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -116,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,18 +294,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import optax\n",
-    "from functools import partial\n",
+    "def update_params(params, subkey, opt_state, grad_fun=None, n_particles=100, y_meas=None, model=None, learning_rate=0.01, mask=None,\n",
+    "                  optimizer=None):\n",
+    "    '''\n",
+    "    Args:\n",
+    "        params: A jnp.array that represents the values of the parameters before the gradient update.\n",
+    "        subkey: The subkey for the current loop iteration.\n",
+    "        opt_state: The optimizer state of the parameters.\n",
+    "        grad_fun: The function with which to take the gradients with respect to.\n",
+    "        n_particles: The number of particles for the particle filter.\n",
+    "        y_meas: The observed data `y_meas`\n",
+    "        model: The model class which has the predefined methods to run the forward pass.\n",
+    "        learning_rate: The learning rate for the stochastic optimization method.\n",
+    "        mask: A mask (0 or 1 vector) which represents the parameters that we wish to update in an iteration.\n",
+    "        optimizer: The choice of stochastic optimizer (e.g. Adam/Adagrad)\n",
+    "    \n",
+    "    Returns:\n",
+    "        params: The updated parameters at the end of the stochastic optimization step.\n",
+    "    '''\n",
+    "    params_update = jax.grad(grad_fun, argnums=0)(\n",
+    "        params, subkey, n_particles, y_meas, model)\n",
+    "    params_update = jnp.where(mask, params_update, 0)\n",
+    "    updates, opt_state = optimizer.update(params_update, opt_state)\n",
+    "    return optax.apply_updates(params, updates) \n",
     "\n",
     "def simple_grad_descent (model, theta, grad_fun, y_meas, n_particles=100, \n",
     "                         n_iter=10, learning_rate=0.01, key=1, mask=None):\n",
     "    optimizer = optax.adam(learning_rate)\n",
     "    opt_state = optimizer.init(theta)\n",
-    "    partial_update_params = partial(pf.update_params, n_particles=n_particles, y_meas=y_meas,\n",
+    "    partial_update_params = partial(update_params, n_particles=n_particles, y_meas=y_meas,\n",
     "                                    model=model, learning_rate=learning_rate, mask=mask, \n",
     "                                    grad_fun=grad_fun, optimizer=optimizer)\n",
     "    update_fn = jax.jit(partial_update_params, donate_argnums=(0,))\n",
@@ -303,113 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True params:  [1.  1.  4.  1.  0.1 0.1 0.1 0.1]\n",
-      "[1.  0.9 3.8 1.  0.1 0.1 0.1 0.1]\n",
-      "[0.99000007 0.9099999  3.81       0.99000007 0.10999993 0.10999993\n",
-      " 0.10999993 0.09000007]\n",
-      "[0.98000014 0.91999984 3.82       0.98000014 0.11999986 0.11999986\n",
-      " 0.11999986 0.1       ]\n",
-      "[0.9700002  0.92999977 3.83       0.99000007 0.1299998  0.10999993\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.9600003  0.9399997  3.84       0.98000014 0.11999987 0.11999986\n",
-      " 0.13999973 0.1       ]\n",
-      "[0.95000035 0.94999963 3.85       0.99000007 0.1299998  0.10999993\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.9400004  0.95999956 3.86       0.98000014 0.11999987 0.1\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9300005  0.9699995  3.87       0.99000007 0.1299998  0.09000007\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8799999  0.98000014 0.11999987 0.1\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9300005  0.9699995  3.8899999  0.99000007 0.1299998  0.09000007\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n",
-      "[0.92000055 0.9799994  3.8999999  1.         0.13999973 0.10000001\n",
-      " 0.11999987 0.1       ]\n",
-      "[0.9100006  0.98999935 3.9099998  0.99000007 0.1299998  0.10999994\n",
-      " 0.1299998  0.10999993]\n"
+      "True params:  [1.  1.  4.  1.  0.1 0.1 0.1 0.1]\n"
      ]
     },
     {
@@ -419,7 +355,7 @@
        "             0.10000001, 0.11999987, 0.1       ], dtype=float32)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,6 +363,7 @@
    "source": [
     "init_params = jnp.array([1.,0.9, 3.8, 1., 0.1, 0.1, 0.1, 0.1])\n",
     "print(\"True params: \", theta)\n",
+    "\n",
     "mvn_params = simple_grad_descent(\n",
     "    key = key,\n",
     "    model = lotvol_model,\n",
@@ -443,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -501,13 +438,6 @@
     "\n",
     "plt.show();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
