--- a/examples/todo.ipynb
+++ b/examples/todo.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "25b1e5d3",
    "metadata": {},
    "source": [
     "# TODO\n",
@@ -44,6 +45,16 @@
     "- [ ] Use this to create a `PGNETModel` class similar to `LotVolModel`.\n",
     "\n",
     "    - It is best to do this on the unconstrained scale.  Please talk to Michelle about how she did this.\n",
+    "\n",
+    "- [ ] Please implement the high-level comment in the `sde.py` module about refactoring the free functions `euler_{sim/lpdf}_{diag/var}()` to take one data point only.  \n",
+    "\n",
+    "    The current vectorized version is mainly useful for debugging; most of what it can do could be done via careful invocations of `sde.state_lpdf()` and `sde.state_sim()`.\n",
+    "    \n",
+    "- [ ] Please refactor `mvn_bridge_pars()` into two functions: one which calculates `mu_Y`, `AS_W`, and `Sigma_Y`, and the other which computes the desired mean and variance based on these three arguments plus `Y`, `mu_W`, and `Sigma_W`.\n",
+    "\n",
+    "    - If possible, please do this in the more general context of the bridge proposal, not just the one which focuses on SDE bridges.  I think this only affects the first of the two functions though.\n",
+    "    \n",
+    "    - For the second function, please replace `jnp.linalg.solve()` with `jsp.linalg.cho_factor()` and `jsp.linalg.cho_solve()`.  Note for the latter that `overwrite_b` and `check_finite` arguments are ignored by JAX, i.e., no solve-in-place as per usual JAX paradigm!\n",
     "\n",
     "### Ferris\n",
     "\n",
@@ -148,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9b70915",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
