--- a/examples/sde.ipynb
+++ b/examples/sde.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a85f29a",
    "metadata": {},
    "source": [
     "# Stochastic Differential Equations in PFJAX\n",
@@ -53,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3739922d",
    "metadata": {},
    "source": [
     "## Implementation in PFJAX\n",
@@ -102,7 +100,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfed5fda",
    "metadata": {},
    "source": [
     "### Bridge Proposal\n",
@@ -211,7 +208,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f70a544d",
    "metadata": {},
    "source": [
     "## Example: Lotka-Volterra Model with Additive Noise\n",
@@ -272,7 +268,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e77298df",
    "metadata": {},
    "source": [
     "## Scratch"
@@ -281,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "395902cf",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6f21397",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -351,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.6.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
