adding new hessian avg algorithm for BMModel

--- a/examples/BMModel.ipynb
+++ b/examples/BMModel.ipynb
@@ -347,10 +347,12 @@
     "    hessian_fn = jax.jacfwd(jax.jacrev(grad_fun))\n",
     "    hess = hessian_fn(optima, key, n_particles=n_particles, y_meas=y_meas, model=model)\n",
     "    keys = random.split(key, iterations)\n",
-    "    for subkey in keys:\n",
+    "    j = 2\n",
+    "    for i in range(len(keys)):\n",
     "        while(jnp.all(jnp.linalg.eigvals(hess) >= 0)): \n",
-    "            new_hess = hessian_fn(optima, subkey, n_particles=n_particles, y_meas=y_meas, model=model)\n",
-    "            hess = (hess + new_hess) / 2.0\n",
+    "            new_hess = hessian_fn(optima, keys[i], n_particles=n_particles, y_meas=y_meas, model=model)\n",
+    "            hess = (((j - 1) / (j)) * hess) + ((1 / j) * new_hess)\n",
+    "            j += 1\n",
     "    return hess "
    ]
   },
