--- a/examples/BMModel.ipynb
+++ b/examples/BMModel.ipynb
@@ -32,16 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 1.0, 'Latent Variable(x_state) and Observation(y_meas)')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +127,7 @@
        "DeviceArray(-326.22656, dtype=float32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +163,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Closed-Form Latents')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +225,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Estimated Latents')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,10 +356,10 @@
     "    keys = random.split(key, iterations)\n",
     "    j = 2\n",
     "    for i in range(len(keys)):\n",
-    "        while(jnp.all(jnp.linalg.eigvals(hess) >= 0)): \n",
-    "            new_hess = hessian_fn(optima, keys[i], n_particles=n_particles, y_meas=y_meas, model=model)\n",
-    "            hess = (((j - 1) / (j)) * hess) + ((1 / j) * new_hess)\n",
-    "            j += 1\n",
+    "        # while(jnp.all(jnp.linalg.eigvals(hess) >= 0)): \n",
+    "        new_hess = hessian_fn(optima, keys[i], n_particles=n_particles, y_meas=y_meas, model=model)\n",
+    "        hess = (((j - 1) / (j)) * hess) + ((1 / j) * new_hess)\n",
+    "        j += 1\n",
     "    return hess "
    ]
   },
@@ -365,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +391,7 @@
        "DeviceArray([4.9720020e+00, 4.0016640e-03, 9.1200113e-01], dtype=float32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,17 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hess = hessian_averaging_alg(params, key, particle_neg_loglik, y_meas, bm_model)\n",
     "var_hat = jnp.linalg.inv(hess)\n",
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -455,6 +454,13 @@
     "temp = jnp.all(jnp.linalg.eigvals(jnp.array(var_hat)) >= 0)\n",
     "print(\"New Hessian Estimate obtained by adding {0} to original is psd: \".format(additive_const), temp)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
