adding BMModel BFGS convergence results + averaging comparison

--- a/examples/BMModel.ipynb
+++ b/examples/BMModel.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "Text(0.5, 1.0, 'Latent Variable(x_state) and Observation(y_meas)')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "DeviceArray(-326.22662, dtype=float32)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Closed-Form Latents')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Estimated Latents')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "DeviceArray([4.9780016 , 0.07461505, 0.91028327], dtype=float32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -453,9 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.0567403 -2.9386334  0.       ]\n",
+      "[5.0567403  0.05293802 1.        ]\n",
+      "OptimizeResults(x=DeviceArray([ 5.0567575, -2.9386413,  0.       ], dtype=float32), success=DeviceArray(False, dtype=bool), status=DeviceArray(3, dtype=int32, weak_type=True), fun=DeviceArray(167.52411, dtype=float32), jac=DeviceArray([-2.861023e-05, -0.000000e+00, -0.000000e+00], dtype=float32), hess_inv=DeviceArray([[0.39312333, 0.04609951, 0.        ],\n",
+      "             [0.0460995 , 0.02348395, 0.        ],\n",
+      "             [0.        , 0.        , 1.        ]], dtype=float32), nfev=DeviceArray(41, dtype=int32, weak_type=True), njev=DeviceArray(41, dtype=int32, weak_type=True), nit=DeviceArray(7, dtype=int32, weak_type=True))\n"
+     ]
+    }
+   ],
    "source": [
     "# Maximizing `bm_loglik_exact`\n",
     "\n",
@@ -466,23 +478,53 @@
     "    print(theta_init)\n",
     "    return theta_init\n",
     "\n",
+    "\n",
+    "# We try an alternate optimizer as well apart from gradient ascent which is the `jax.scipy.optimize.minimize`\n",
+    "from jax.scipy import optimize\n",
+    "def min_bm_loglik(theta):\n",
+    "    return -1.0 * bm_loglik(theta, y_meas, dt)\n",
+    "\n",
+    "bfgs_theta_converged = optimize.minimize(min_bm_loglik, jnp.array([5.0, jnp.log(0.054), jnp.log(1.0)]), method='BFGS')\n",
+    "\n",
+    "# theta_hat_exact is the parameter optimal on the unconstrained scale.\n",
     "theta_hat_exact = max_bm_loglik_exact(jnp.array([5.0, jnp.log(0.054), jnp.log(1.0)]), 1000, 0.01)\n",
-    "theta_hat_exact = jnp.array([theta_hat_exact[0], jnp.exp(theta_hat_exact[1]), jnp.exp(theta_hat_exact[2])])\n",
-    "print(theta_hat_exact)"
+    "# theta_hat_exact_orig_scale is the parameter optimal on the original scale.\n",
+    "theta_hat_exact_orig_scale = jnp.array([theta_hat_exact[0], jnp.exp(theta_hat_exact[1]), jnp.exp(theta_hat_exact[2])])\n",
+    "print(theta_hat_exact_orig_scale)\n",
+    "print(bfgs_theta_converged)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.0567575 0.0529376 1.       ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "theta_bfgs_conv = bfgs_theta_converged.x\n",
+    "theta_bfgs_conv = jnp.array([theta_bfgs_conv[0], jnp.exp(theta_bfgs_conv[1]), jnp.exp(theta_bfgs_conv[2])])\n",
+    "print(theta_bfgs_conv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f7503de94c0>"
+       "<matplotlib.lines.Line2D at 0x7f74f2177400>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -527,14 +569,14 @@
     "rp.fig.subplots_adjust(top=0.9) # adjust the Figure in rp\n",
     "rp.fig.suptitle('Projection Plots using Closed-Form Latents')\n",
     "\n",
-    "rp.axes[0].axvline(theta_hat_exact[0], color='red')\n",
-    "rp.axes[1].axvline(theta_hat_exact[1], color='red')\n",
-    "rp.axes[2].axvline(theta_hat_exact[2], color='red')\n"
+    "rp.axes[0].axvline(theta_hat_exact_orig_scale[0], color='red')\n",
+    "rp.axes[1].axvline(theta_hat_exact_orig_scale[1], color='red')\n",
+    "rp.axes[2].axvline(theta_hat_exact_orig_scale[2], color='red')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +596,7 @@
    "source": [
     "# Check if PD at this mode\n",
     "\n",
-    "hess = hess_fn(theta_hat_exact, y_meas, dt)\n",
+    "hess = hess_fn(theta_hat_exact_orig_scale, y_meas, dt)\n",
     "var_hat = jnp.linalg.inv(hess)\n",
     "temp = jnp.all(jnp.linalg.eigvals(var_hat) >= 0)\n",
     "print(var_hat)\n",
@@ -571,25 +613,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hess = hessian_averaging_alg(params, key, particle_neg_loglik, y_meas, bm_model,\n",
-    "                            iterations=100, n_particles=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "[[ 1.2014243e+04 -3.3345013e+02  4.0377237e+02]\n",
+      " [-3.3344998e+02  1.6433849e+01 -7.6909542e+00]\n",
+      " [ 4.0377222e+02 -7.6909542e+00  1.5836877e+02]]\n",
+      "[[-388.11404     80.61131      1.3434749]\n",
+      " [  80.61129    -19.888283    -9.456649 ]\n",
+      " [   1.3436012   -9.456618  -144.85129  ]]\n"
      ]
+    }
+   ],
+   "source": [
+    "# We now try to check whether `averaging(bm_hess(theta)) -> bm_hess_exact(theta)` for the different values of theta = theta_true, theta_hat_exact, theta_hat. \n",
+    "# params is now theta_hat_exact_orig_scale\n",
+    "hess_avg = jnp.mean(hessian_averaging_alg(theta_hat_exact, key, particle_neg_loglik, y_meas, bm_model,\n",
+    "                            iterations=100, n_particles=1000), axis=0)\n",
+    "hess_exact = hess_fn(theta_hat_exact_orig_scale, y_meas, dt)\n",
+    "# print(hess_avg)\n",
+    "# print(hess_exact)\n",
+    "\n",
+    "# Test Case: theta_true\n",
+    "\n",
+    "theta_true = jnp.array([5.0, 0.2, 1.0])\n",
+    "theta_true_unc_scale = jnp.array([theta_true[0], jnp.log(theta_true[1]), jnp.log(theta_true[2])])\n",
+    "\n",
+    "hess_avg2 = jnp.mean(hessian_averaging_alg(theta_true_unc_scale, key, particle_neg_loglik, y_meas, bm_model,\n",
+    "                            iterations=100, n_particles=1000), axis=0)\n",
+    "hess_exact2 = hess_fn(theta_true, y_meas, dt)\n",
+    "\n",
+    "print(hess_avg2)\n",
+    "print(hess_exact2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
