log-lotvol experiments

--- a/examples/pf-mvn.ipynb
+++ b/examples/pf-mvn.ipynb
@@ -944,10 +944,14 @@
    "source": [
     "## TODO\n",
     "\n",
-    "- Convert LotVol SDE to log scale. Use Mohan's branch - In progress\n",
-    "- How do the resampling methods for different resolution numbers?\n",
-    "- Create notebook of comparison for MVN VS Multinomial resampling methods. Assume research group only understand the two filters but don't know about the differences.\n",
-    "- Use Kanika's library for proj plots"
+    "- [ ] Use bridge particle filter instead of bootstrap filter\n",
+    "- [ ] Plot param values during optimization for both resampling methods. We should expect the MVN resampling parameters to converge to a \"steady state\" quicker than the Multinomial resampling\n",
+    "\n",
+    "\n",
+    "- [ ] Convert LotVol SDE to log scale. Use Mohan's branch - In progress\n",
+    "- [ ] How do the resampling methods for different resolution numbers?\n",
+    "- [ ] Create notebook of comparison for MVN VS Multinomial resampling methods. Assume research group only understand the two filters but don't know about the differences.\n",
+    "- [ ] Use Kanika's library for proj plots"
    ]
   },
   {
