updated test of mvn_bridge

--- a/examples/bridge_proposal.ipynb
+++ b/examples/bridge_proposal.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bb3063ac",
    "metadata": {},
    "source": [
     "# Bridge Proposals for SDEs\n",
@@ -39,6 +40,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e9570a3b",
    "metadata": {},
    "source": [
     "### Numerical Verification\n",
@@ -49,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "aa22abf4",
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +147,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7800901",
    "metadata": {},
    "source": [
     "Next, we verify that $p(\\WW, \\YY) = p(\\YY) p(\\WW \\mid \\YY)$, where the LHS is the multivariate normal with mean and variance subset from those of $p(\\WW, \\XX, \\YY)$, and the RHS is the product of the conditional distribution of interest and the marginal of $\\WW$, which is the top left corner of $p(\\WW, \\XX, \\YY)$."
@@ -152,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
+   "id": "cb5152cc",
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
+   "id": "469f6f31",
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
+   "id": "f91dc49d",
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
+   "id": "afd6cd4a",
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "565acfc1",
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "79f199d1",
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "be98ba6c",
    "metadata": {},
    "outputs": [
     {
@@ -330,6 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "59699080",
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0c4a7a14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -357,7 +370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -371,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
